Bug 72448 - SVG: Draw does not export background colors/images in certain cases when select "Gradient", "Hatching", "Bitmap" or "Color" options from tool bar mixed with "Transparency" tab options, who are "No transparency", "Transparency" and "Gradient"
Summary: SVG: Draw does not export background colors/images in certain cases when sele...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-07 19:22 UTC by Maximiliano Castañón
Modified: 2015-06-20 13:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File SVG exported from LO 4.2 (37.79 KB, image/svg+xml)
2013-12-07 19:22 UTC, Maximiliano Castañón
Details
File SVG exported from LO 4.1 (23.53 KB, image/svg+xml)
2013-12-07 19:22 UTC, Maximiliano Castañón
Details
File exported from LO 4.2 (149.56 KB, image/png)
2013-12-07 19:23 UTC, Maximiliano Castañón
Details
ODG File created with LO4.2 who appear with green background colors (20.81 KB, application/vnd.oasis.opendocument.graphics)
2013-12-07 19:24 UTC, Maximiliano Castañón
Details
tested degrated and a transparency (9.62 KB, application/vnd.oasis.opendocument.graphics)
2013-12-10 04:02 UTC, Maximiliano Castañón
Details
Hatching and Bitmap are not exported too (20.81 KB, application/vnd.oasis.opendocument.graphics)
2013-12-11 19:52 UTC, Maximiliano Castañón
Details
Case 1 ODG file, "No Transparency". (29.37 KB, application/vnd.oasis.opendocument.graphics)
2013-12-11 20:25 UTC, Maximiliano Castañón
Details
Case 2 ODG file, "Transparency". (29.50 KB, application/vnd.oasis.opendocument.graphics)
2013-12-11 20:26 UTC, Maximiliano Castañón
Details
Case 3 ODG file, "Gradient". (29.67 KB, application/vnd.oasis.opendocument.graphics)
2013-12-11 20:26 UTC, Maximiliano Castañón
Details
Case 1 SVG file, "No Transparency". (71.84 KB, image/svg+xml)
2013-12-11 20:27 UTC, Maximiliano Castañón
Details
Case 2 SVG file, "Transparency". (73.97 KB, image/svg+xml)
2013-12-11 20:27 UTC, Maximiliano Castañón
Details
Case 3 SVG file, "Gradient". (74.10 KB, image/svg+xml)
2013-12-11 20:28 UTC, Maximiliano Castañón
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maximiliano Castañón 2013-12-07 19:22:01 UTC
Created attachment 90424 [details]
File SVG exported from LO 4.2

I have created a file  who doesn't export the background color, so I see something in LibreOffice 4.1 and 4.2 but when they export the file to SVG the background are not exported, but to PNG and JPG it are exported correctly.
Comment 1 Maximiliano Castañón 2013-12-07 19:22:29 UTC
Created attachment 90425 [details]
File SVG exported from LO 4.1
Comment 2 Maximiliano Castañón 2013-12-07 19:23:14 UTC
Created attachment 90426 [details]
File exported from LO 4.2
Comment 3 Maximiliano Castañón 2013-12-07 19:24:13 UTC
Created attachment 90427 [details]
ODG File created with LO4.2 who appear with green background colors
Comment 4 Jean-Baptiste Faure 2013-12-08 16:20:42 UTC
Reproducible with Version: 4.2.0.0.beta2+ (Build ID: 09c6257262244456838daf16eb7c034adfeb8fa0) under Ubuntu 13.10 x86-64

Steps to reproduce:
1/ open the bugdoc (odg file)
2/ ctrl+A to select all
3/ menu File > Export > choose SVG file type and check the checkbox "Selection"
4/ button Save
5/ open the svg file in your browser

Best regards. JBF
Comment 5 Maximiliano Castañón 2013-12-08 18:18:52 UTC
Hi, I have to say that the bug it's related with the "degraded" option, when you choose degraded instead of color option.
Comment 6 Maximiliano Castañón 2013-12-10 04:02:46 UTC
Created attachment 90548 [details]
tested degrated and a transparency

when the image have just degrated, it will export a wrong position...

if you use transparency, it will show anything... no color with transparency option.
Comment 7 Jean-Baptiste Faure 2013-12-11 19:14:19 UTC
Ok, transparency and gradients in background colors are not exported in SVG.
Modified the summary to make it more clear.

Best regards. JBF
Comment 8 Maximiliano Castañón 2013-12-11 19:52:35 UTC
Created attachment 90623 [details]
Hatching and Bitmap are not exported too

I tried the option in the GUI who shoe Hatching and Bitmap, both doesn't work, and if you select a box and in the displayed menu you choose "edit style" (this applies for all), then in the tab "Transparency" and choose "gradient" option will experiment same as Gradient in the main option (bar tools).
Comment 9 Maximiliano Castañón 2013-12-11 20:23:53 UTC
Well, doing some tests I detected the problem is a bit bigger, it's extended to some combinations...




If you select a box and put right click on it, choose "edit Style" then go to "Transparency" tab and choose "no transparency" option, the effect is:

When you choose "Gradient" option in the bar tool, will be exported but to wrong position.
When you choose "Hatching" option in the bar tool, will be not exported.
When you choose "Bitmap" option in the bar tool, will be exported, but wrong size.
When you choose "Color" option in the bar tool, will be exported as expected.




If you select a box and put right click on it, choose "edit Style" then go to "Transparency" tab and choose "transparency" option, the effect is:

When you choose "Gradient" option in the bar tool, will be exported but to wrong position.
When you choose "Hatching" option in the bar tool, will be not exported.
When you choose "Bitmap" option in the bar tool, will be not exported.
When you choose "Color" option in the bar tool, will be exported as expected.




If you select a box and put right click on it, choose "edit Style" then go to "Transparency" tab and choose "gradient" option, the effect is:


When you choose "Gradient" option in the bar tool, will be exported but to wrong position.
When you choose "Hatching" option in the bar tool, will be not exported.
When you choose "Bitmap" option in the bar tool, will be not exported.
When you choose "Color" option in the bar tool, will be not exported.
Comment 10 Maximiliano Castañón 2013-12-11 20:25:31 UTC
Created attachment 90624 [details]
Case 1 ODG file, "No Transparency".
Comment 11 Maximiliano Castañón 2013-12-11 20:26:03 UTC
Created attachment 90625 [details]
Case 2 ODG file, "Transparency".
Comment 12 Maximiliano Castañón 2013-12-11 20:26:32 UTC
Created attachment 90626 [details]
Case 3 ODG file, "Gradient".
Comment 13 Maximiliano Castañón 2013-12-11 20:27:12 UTC
Created attachment 90627 [details]
Case 1 SVG file, "No Transparency".
Comment 14 Maximiliano Castañón 2013-12-11 20:27:53 UTC
Created attachment 90628 [details]
Case 2 SVG file, "Transparency".
Comment 15 Maximiliano Castañón 2013-12-11 20:28:18 UTC
Created attachment 90629 [details]
Case 3 SVG file, "Gradient".
Comment 16 Commit Notification 2014-03-02 11:38:23 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37021dfb3f3dcf082ec1b656dfac71f593a97cec

fdo#72448 fix gradient color/transparency pos. in SVG export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 László Németh 2014-03-02 11:54:49 UTC
Gradient color/transparency positions are fixed in the development version. It seems, hatching, maybe bitmap filling doesn't work at all (without transparency), so I suggest to modify the summary or open a new issue for those problems. Thanks for the bug report and the testing!
Comment 18 Joel Madero 2015-05-02 15:41:44 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

   Test to see if the bug is still present on a currently supported version of LibreOffice (4.4.2 or later)
   https://www.libreoffice.org/download/

   If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior
 
 If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System

Please DO NOT

   Update the version field
   Reply via email (please reply directly on the bug tracker)
   Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case)


If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3)

http://downloadarchive.documentfoundation.org/libreoffice/old/

2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword


Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa

Thank you for your help!

-- The LibreOffice QA Team This NEW Message was generated on: 2015-05-02
Comment 19 Buovjaga 2015-06-20 13:42:09 UTC
Now it exports ok.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_23:16:58
Locale: fi-FI (fi_FI)