fdo#72448 fix gradient color/transparency pos. in SVG export

Change-Id: If65ffb9ac71eda95d8b5c4b35fd5828795b0469a